--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/armor.yml
@@ -1,5 +1,5 @@
 - type: entity
-  parent: [ ClothingOuterBaseLarge, BaseC2ContrabandUnredeemable ]
+  parent: [ BaseC2ContrabandUnredeemable , ClothingOuterArmorCaptainCarapace ]
   id: ClothingOuterArmorSrCarapace
   name: "station representative's carapace"
   description: "A premium armored chestpiece that provides above average protection for its size. It offers maximum mobility and flexibility thanks to the premium composite materials. Issued only to the station representative."
@@ -21,7 +21,6 @@
     sprintModifier: 1.0
   - type: ExplosionResistance
     damageCoefficient: 0.60
-  - type: GroupExamine
 
 # Syndicate armored bio suit
 - type: entity
@@ -52,7 +51,7 @@
     damageCoefficient: 0.60
 
 - type: entity
-  parent: [ ClothingOuterBaseLarge, BaseC2ContrabandUnredeemable ]
+  parent: [ BaseC2ContrabandUnredeemable, ClothingOuterArmorBasic ]
   id: ClothingOuterArmorNfsd
   name: nfsd armor
   description: get shot, maybe survive?
@@ -61,20 +60,6 @@
     sprite: _NF/Clothing/OuterClothing/Armor/nfsd_armor.rsi
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Armor/nfsd_armor.rsi
-  - type: Armor
-    modifiers:
-      coefficients:
-        Blunt: 0.7
-        Slash: 0.7
-        Piercing: 0.65
-        Heat: 0.7
-        Caustic: 0.65
-  - type: ClothingSpeedModifier
-    walkModifier: 1.0
-    sprintModifier: 1.0
-  - type: ExplosionResistance
-    damageCoefficient: 0.60
-  - type: GroupExamine
 
 - type: entity
   parent: [ BaseC1Contraband, ClothingOuterVestWebMercenary ]
