--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -208,7 +208,7 @@
         Slash: 0.2
         Piercing: 0.2
         Heat: 0.5
-        Radiation: 0
+        Radiation: 0.5 # Frontier 0<0.5
         Caustic: 0.75
   - type: GroupExamine
   - type: ProtectedFromStepTriggers
