Reduce syndie medical duffel fill (medkits big)

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
@@ -304,17 +304,17 @@
     contents:
       - id: DefibrillatorSyndicate
       - id: MedkitCombatFilled
-        amount: 4
+        amount: 2 # Frontier: 4<2
       - id: Tourniquet
-        amount: 4
+        amount: 3 # Frontier: 4<3
       - id: CombatMedipen
-        amount: 4
+        amount: 3 # Frontier: 4<3
       - id: PunctAutoInjector
         amount: 4
       - id: PyraAutoInjector
-        amount: 4
+        amount: 3 # Frontier: 4<3
       - id: AirlossAutoInjector
-        amount: 4
+        amount: 3 # Frontier: 4<3
 
 - type: entity
   parent: ClothingBackpackDuffelSyndicateBundle
