Move StationDataComponent to shared

--- a/Resources/Prototypes/Entities/Structures/Machines/research.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/research.yml
@@ -1,7 +1,7 @@
 # Frontier: made this into a decorative object, each grid now ensures the comp without needing servers.
 - type: entity
   id: ResearchAndDevelopmentServer
-  parent: [ BaseMachinePowered, ConstructibleMachine ]
+  parent: [ BaseMachinePowered ] # Frontier: [ BaseMachinePowered, ConstructibleMachine ] -> [ BaseMachinePowered ]
   name: R&D server
   description: Contains the collective knowledge of the station's scientists. Destroying it would send them back to the stone age. You don't want that do you?
   components:
