--- a/Resources/Prototypes/_NF/Procedural/scrap_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/scrap_vgroid.yml
@@ -27,7 +27,7 @@
       - Plating
     # Fill
     # - !type:PrototypeDunGen
-      # proto: NFVGRoidFillChromite
+      # proto: NFVGRoidFillScrap
     # "WarpPoint"
     - !type:OreDunGen
       tileMask:
@@ -40,7 +40,7 @@
     - !type:OreDunGen
       entityMask:
       - WallRockScrapPile
-      entity: WallRockScrapPile # ChromiteElementalSpawner
+      entity: WallRockScrapPile # ScrapElementalSpawner
       count: 100
       minGroupSize: 1
       maxGroupSize: 1
@@ -247,7 +247,7 @@
       amount: 1
 
 #- type: dungeonConfig
-#  id: NFVGRoidInteriorDungeonsChromite
+#  id: NFVGRoidInteriorDungeonsScrap
 #  minCount: 3
 #  maxCount: 5
 #  # Just randomly spawn these in bounds, doesn't really matter if they go out.
@@ -282,13 +282,14 @@
       entities:
         - SpawnDungeonCanisterBroken # TODO: replace with light fixture
     - !type:BiomeEntityLayer
-      threshold: 0.97
+      divisions: 1
+      threshold: -0.35
       noise:
         seed: 1
         noiseType: OpenSimplex2
         frequency: 1
       allowedTiles:
-        - Plating
+        - Lattice
       entities:
         - ComputerBroken
         - WeaponTurretSyndicateBroken
@@ -314,7 +315,7 @@
         - WallRockScrapPile
     - !type:BiomeDummyLayer
       id: Loot
-    # Fill chromite
+    # Fill scrap
     - !type:BiomeTileLayer
       threshold: -1
       tile: Lattice # Plating
