--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1397,6 +1397,7 @@
         - MaterialBananium1
         - MaterialDiamond
         - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
+        #- SmeltScrap # Frontier
 
 - type: entity
   parent: OreProcessor
@@ -1427,6 +1428,7 @@
       - MaterialBananium1
       - MaterialDiamond
       - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
+      - SmeltScrap # Frontier
 
 - type: entity
   parent: BaseLathe
