special names for shuttles, verbatim names, etc.

--- a/Resources/Prototypes/_NF/Events/nf_bluespace_salvage_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_salvage_events.yml
@@ -18,6 +18,7 @@
     groups:
       grid: !type:GridSpawnGroup
         nameDataset: names_scrap
+        nameDatasetType: Nanotrasen # they're shuttles
         minCount: 2
         maxCount: 3
         minimumDistance: 1000
