Boss now die for sins

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
@@ -109,6 +109,20 @@
     - type: TimedSpawner
     - type: Advertise
       pack: FuelVendAds # placeholder, required field, unused
+    - type: Jittering
+
+- type: entity
+  abstract: true
+  id: NFMobBossRestrictions
+  components:
+  - type: NFSalvageMobRestrictions
+    addComponentsLeaveGrid:
+    - type: TimedDespawn
+      lifetime: 30
+    - type: Pacified
+    removeComponentsReturnGrid:
+    - type: TimedDespawn
+    - type: Pacified
 
 - type: entity
   abstract: true
