--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_mercenaries.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_mercenaries.yml
@@ -451,7 +451,7 @@
 ## Tier 4 - Boss
 - type: entity
   name: mercenary captain
-  parent: MobMercenaryBase
+  parent: [ MobMercenaryBase, NFMobBossRestrictions ]
   id: MobMercenaryCaptain
   description: The leaders of these bands of brigands, a mercenary captain is both cruel and lethally effective. Exercise caution.
   categories: [ HideSpawnMenu ]
