--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -186,7 +186,7 @@
     projectileSpeed: 5
 
 - type: entity
-  parent: [NFMobRestrictions, BaseMobDragon, MobNonHumanHostileBase] # Frontier: add NFMobRestrictions, MobNonHumanHostileBase
+  parent: [NFMobRestrictions, BaseMobDragon, MobNonHumanHostileBase, NFMobBossRestrictions ] # Frontier: add NFMobRestrictions, MobNonHumanHostileBase, NFMobBossRestrictions
   id: MobDragonDungeon
   suffix: Dungeon
   components:
