--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -514,6 +514,7 @@
   - MobHostileBossBase
   - MobExplorerBase
   - MobHumanoidHostileAISimpleMelee
+  - NFMobBossRestrictions
   id: MobExplorerBoss
   description: Fearless and battle-hardened salvage team leaders, it takes years picking through the darkest corners of space and navigating the galaxy's criminal underbelly of the galaxy before you can become a captain. Not to be underestimated.
   categories: [ HideSpawnMenu ]
