--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_rogue_ai.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_rogue_ai.yml
@@ -951,6 +951,7 @@
   - MobRogueSiliconDroneBase
   - MobPassiveRegenStrong
   - MobRogueSiliconHitscanBatteryAmmo
+  - NFMobBossRestrictions
   id: MobRogueSiliconGuardian
   name: guardian unit
   description: An advanced security silicon, typically used to safeguard high-security areas such as vaults and server rooms. After being hacked, this unit carries out the AI's will.
