Frezon to 0.4 (still profitable vs. T), spooky

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
@@ -87,6 +87,7 @@
     originalName: spooky
   - type: FriedTrait
     crispinessLevelSet: Spectral
+  - type: Spectral
 
 - type: entity
   name: dragon omelette
