--- a/Resources/Prototypes/Atmospherics/gases.yml
+++ b/Resources/Prototypes/Atmospherics/gases.yml
@@ -99,4 +99,4 @@
   gasMolesVisible: 0.6
   color: 3a758c
   reagent: Frezon
-  pricePerMole: 3 # Frontier 0.3<3 TODO: Rebalance
+  pricePerMole: 0.4 # Frontier 0.3<0.4 TODO: rebalance this
