Add AstroNav cartridge to admin PDA, cart order

--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
@@ -18,12 +18,13 @@
       - NotekeeperCartridge
       - NewsReaderCartridge
       - BountyContractsCartridge
+      - AstroNavCartridge
       - WantedListCartridge
+      - LedgerCartridge
       - LogProbeCartridge
       - MailMetricsCartridge
       - AppraisalCartridge
       - NetProbeCartridge
-      - LedgerCartridge
 
 - type: entity
   parent: BasePDA
@@ -471,8 +472,8 @@
     - NewsReaderCartridge
     - BountyContractsCartridge
     - AstroNavCartridge
-    - MailMetricsCartridge
     - LedgerCartridge
+    - MailMetricsCartridge
 
 - type: entity
   parent: PiratePDA
