syndie biz card: destroy on send, skip tests

--- a/Resources/Prototypes/Entities/Objects/Misc/business_card.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/business_card.yml
@@ -16,6 +16,7 @@
         visible: false
     - type: Paper
       content: syndicate-business-card-base
+      destroyOnFax: true # Frontier: avoid spamming these, they cause lag
     - type: PaperVisuals
       headerImagePath: "/Textures/Interface/Paper/paper_heading_syndicate_logo.svg.96dpi.png"
       headerMargin: 0.0, 0.0, 0.0, 2.0
