--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -213,11 +213,12 @@
       - ServiceSpoon
       - ServiceFork
       - ServicePairedChopsticks
-      - ServiceFoodBowlBig
-      - ServiceFoodPlate
-      - ServiceFoodPlateSmall
-      - ServiceFoodPlateTin
-      - ServiceFoodKebabSkewer
+      - FoodBowlBig
+      - FoodPlate
+      - FoodPlateSmall
+      - FoodPlateMuffinTin
+      - FoodPlateTin
+      - FoodKebabSkewer
       - DrinkShotGlass
       - DrinkGlassCoupeShaped
       - CustomDrinkJug
