Wristwatch loadouts, show shift time, 24h, mail

--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -781,6 +781,8 @@
   - ContractorDrinkVacuumFlask
   - ContractorFlashlightLantern
   - ContractorCardBoxBlack
+  - ContractorWristwatch
+  - ContractorWristwatchGold
   - ContractorBasketball
   - ContractorFootball
   - ContractorBeachBall
