--- a/Resources/Audio/_NF/Weapons/Guns/Gunshots/attributions.yml
+++ b/Resources/Audio/_NF/Weapons/Guns/Gunshots/attributions.yml
@@ -1,4 +1,4 @@
-- files: ["rifle3.ogg"]
+- files: ["rifle.ogg"]
   license: "CC-BY-3.0"
   copyright: "Created by Michel Baradari apollo-music.de"
   source: "https://opengameart.org/content/chaingun-pistol-rifle-shotgun-shots"
