voice mask: remove suffix (not accurate)

--- a/Resources/Prototypes/Entities/Clothing/Masks/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/specific.yml
@@ -27,7 +27,7 @@
 - type: entity
   parent: ClothingMaskGasChameleon
   id: ClothingMaskGasVoiceChameleon
-  suffix: Voice Mask, Chameleon, Radio Unknown Name # Frontier - Extended suffix
+  suffix: Voice Mask, Chameleon
   components:
     - type: VoiceMask
     - type: HideLayerClothing
