Give ERT mail metrics

--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -913,6 +913,7 @@
       - WantedListCartridge
       - LogProbeCartridge
       - AstroNavCartridge
+      - MailMetricsCartridge # Frontier
 
 - type: entity
   parent: ERTLeaderPDA
