syndie business card deletion and messages

--- a/Resources/Prototypes/Entities/Objects/Misc/business_card.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/business_card.yml
@@ -17,6 +17,7 @@
     - type: Paper
       content: syndicate-business-card-base
       destroyOnFax: true # Frontier: avoid spamming these, they cause lag
+      destroyMessage: fax-delete-paper-generic # Frontier
     - type: PaperVisuals
       headerImagePath: "/Textures/Interface/Paper/paper_heading_syndicate_logo.svg.96dpi.png"
       headerMargin: 0.0, 0.0, 0.0, 2.0
