New baked recipes use the oven

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -1175,6 +1175,7 @@
     FoodDoughPie: 1
     FoodPumpkin: 1
     FoodPlateTin: 1
+  recipeType: Oven # Frontier
 
 #- type: microwaveMealRecipe
 #  id: RecipePlumpPie
@@ -1970,6 +1971,7 @@
     FoodDoughSlice: 1
   reagents:
     Sugar: 10
+  recipeType: Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeMuffinChocolate
@@ -1982,6 +1984,7 @@
     FoodSnackChocolateBar: 1
   reagents:
     Sugar: 10
+  recipeType: Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeMuffinBerry
@@ -1994,6 +1997,7 @@
     FoodBerries: 1
   reagents:
     Sugar: 10
+  recipeType: Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeMuffinBanana
@@ -2006,6 +2010,7 @@
     FoodBanana: 1
   reagents:
     Sugar: 10
+  recipeType: Oven # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeMuffinCherry
@@ -2018,6 +2023,7 @@
     FoodCherry: 3
   reagents:
     Sugar: 10
+  recipeType: Oven # Frontier
 
 # NOT ACTUAL FOOD
 
