--- a/Resources/Prototypes/_NF/Recipes/Construction/Graphs/furniture/shelfs.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/Graphs/furniture/shelfs.yml
@@ -24,25 +24,37 @@
             - material: Cable
               amount: 3
               doAfter: 1
+            - tag: FreezerElectronics
+              name: freezer electronics
+              icon:
+                sprite: Objects/Misc/module.rsi
+                state: door_electronics
 # White wall freezer deconstructs
     - node: ShelfWallFreezerWhite
       entity: ShelfWallFreezerWhite
       edges:
         - to: start
+          conditions:
+          - !type:StorageWelded
+            welded: false
           completed:
+            - !type:SpawnPrototype
+              prototype: SheetPlasteel1
+              amount: 5
+            - !type:SpawnPrototype
+              prototype: SheetPlastic1
+              amount: 5
+            - !type:SpawnPrototype
+              prototype: SheetGlass1
+              amount: 5
+            - !type:SpawnPrototype
+              prototype: CableApcStack1
+              amount: 3
+            - !type:SpawnPrototype
+              prototype: FreezerElectronics
+              amount: 1
             - !type:EmptyAllContainers
-            - !type:SpawnPrototype
-                prototype: SheetPlasteel1
-                amount: 5
-            - !type:SpawnPrototype
-                prototype: SheetPlastic1
-                amount: 5
-            - !type:SpawnPrototype
-                prototype: SheetGlass1
-                amount: 5
-            - !type:SpawnPrototype
-                prototype: CableApcStack1
-                amount: 3
+            - !type:DeleteEntity
           steps:
             - tool: Screwing
               doAfter: 2
@@ -71,20 +83,27 @@
       entity: ShelfWallFreezerDark
       edges:
         - to: start
+          conditions:
+          - !type:StorageWelded
+            welded: false
           completed:
+            - !type:SpawnPrototype
+              prototype: SheetPlasteel1
+              amount: 5
+            - !type:SpawnPrototype
+              prototype: SheetPlastic1
+              amount: 5
+            - !type:SpawnPrototype
+              prototype: SheetGlass1
+              amount: 5
+            - !type:SpawnPrototype
+              prototype: CableApcStack1
+              amount: 3
+            - !type:SpawnPrototype
+              prototype: FreezerElectronics
+              amount: 1
             - !type:EmptyAllContainers
-            - !type:SpawnPrototype
-                prototype: SheetPlasteel1
-                amount: 5
-            - !type:SpawnPrototype
-                prototype: SheetPlastic1
-                amount: 5
-            - !type:SpawnPrototype
-                prototype: SheetGlass1
-                amount: 5
-            - !type:SpawnPrototype
-                prototype: CableApcStack1
-                amount: 3
+            - !type:DeleteEntity
           steps:
             - tool: Screwing
               doAfter: 2
