Remove duped hydroponics tool recipes

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -185,11 +185,11 @@
       - Bucket
       - MopItem
       - SprayBottle
-      - NFMiniHoe
+      - HydroponicsToolMiniHoe
       - HydroponicsToolScythe
       - HydroponicsToolHatchet
-      - NFSpade
-      - NFClippers
+      - HydroponicsToolSpade
+      - HydroponicsToolClippers
       - ServiceSelectiveDropper
       - PlantBag
       - Beaker
