Vim: contractor access

--- a/Resources/Prototypes/Entities/Objects/Specific/Mech/mechs.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Mech/mechs.yml
@@ -293,8 +293,10 @@
     baseWalkSpeed: 2.25
     baseSprintSpeed: 3.6
   - type: Access
-    tags:
-    - Maintenance
+    groups: # Frontier: contractor access
+    - GeneralAccess # Frontier
+    # tags: # Frontier
+    # - Maintenance # Frontier
   # TOOD: buzz / chime actions
   # TODO: builtin flashlight
 
