--- a/Resources/Prototypes/Roles/Jobs/Civilian/service_worker.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/service_worker.yml
@@ -10,13 +10,15 @@
   startingGear: ServiceWorkerGear
   icon: "JobIconServiceWorker"
   supervisors: job-supervisors-service
-  access:
-  - Service
-  - Maintenance
-  - Bar
-  - Kitchen
-  extendedAccess:
-  - Hydroponics
+  accessGroups: # Frontier
+  - GeneralAccess # Frontier
+  # access: # Frontier
+  # - Service # Frontier
+  # - Maintenance # Frontier
+  # - Bar # Frontier
+  # - Kitchen # Frontier
+  # extendedAccess: # Frontier
+  # - Hydroponics # Frontier
 
 - type: startingGear
   id: ServiceWorkerGear
