--- a/Resources/Prototypes/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/captain.yml
@@ -20,16 +20,15 @@
   weight: 20
   startingGear: CaptainGear
   icon: "JobIconCaptain"
-# Frontier
+# Frontier: commented out below, separate access
 #  requireAdminNotify: true
 #  joinNotifyCrew: true
 #  supervisors: job-supervisors-centcom
 #  canBeAntag: false
   access:
   - Captain # Just making sure in the case of any error that this role cannot be used for any bad doing.
-  - Maintenance # Frontier
-  - External # Frontier
-  # accessGroups:
+  accessGroups:
+  - GeneralAccess # Frontier
   # - AllAccess
   # special:
   # - !type:AddImplantSpecial
@@ -50,4 +49,4 @@
   storage:
     back:
     - Flash
-    # - StationCharter
+    # - StationCharter # Frontier
