accessGroup to accessGroups

--- a/Resources/Prototypes/Roles/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/detective.yml
@@ -25,7 +25,7 @@
   #   implants: [ MindShieldImplant ]
   ## Frontier: commented stuff out above
   setPreference: false # Frontier
-  accessGroup: # Frontier
+  accessGroups: # Frontier
   - GeneralAccess # Frontier
 
 - type: startingGear
