--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -40,7 +40,7 @@
   #     - type: CommandStaff
   ## Frontier: commented out stuff above
   setPreference: false # Frontier
-  accessGroup: # Frontier
+  accessGroups: # Frontier
   - GeneralAccess # Frontier
 
 - type: startingGear
