--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -24,7 +24,7 @@
   #   implants: [ MindShieldImplant ]
   ## End Frontier: commented out stuff above
   setPreference: false # Frontier
-  accessGroup: # Frontier
+  accessGroups: # Frontier
   - GeneralAccess # Frontier
 
 - type: startingGear
