--- a/Resources/Prototypes/Roles/Jobs/Security/warden.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/warden.yml
@@ -26,7 +26,7 @@
   #   implants: [ MindShieldImplant ]
   ## End Frontier: commented out stuff above
   setPreference: false # Frontier
-  accessGroup: # Frontier
+  accessGroups: # Frontier
   - GeneralAccess # Frontier
 
 - type: startingGear
