Remove scheduling on update-credits

--- a/.github/workflows/update-credits.yml
+++ b/.github/workflows/update-credits.yml
@@ -1,9 +1,10 @@
 name: Update Contrib and Patreons in credits
 
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: 0 0 * * 0
+# Frontier: run this manually.
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     - cron: 0 0 * * 0
 
 jobs:
   get_credits:
