Hide non-Frontier Admin PDA

--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -776,6 +776,7 @@
   id: AdminPDA
   name: Admin PDA
   suffix: Admin
+  categories: [ HideSpawnMenu ] # Frontier: use NF variant
   description: If you are not an admin please return this PDA to the nearest admin.
   components:
   - type: Pda
