Fixup for radio servers to NF

--- a/Resources/Maps/_NF/Outpost/frontier.yml
+++ b/Resources/Maps/_NF/Outpost/frontier.yml
@@ -33028,7 +33028,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 22.5,9.5
       parent: 2173
-- proto: TelecomServerFilled
+- proto: NFTelecomServerFilled
   entities:
   - uid: 2775
     components:
