--- a/Resources/Maps/_NF/Test/dev_map.yml
+++ b/Resources/Maps/_NF/Test/dev_map.yml
@@ -7481,7 +7481,7 @@ entities:
     - type: Transform
       pos: -6.5,-1.5
       parent: 179
-- proto: TelecomServerFilled
+- proto: NFTelecomServerFilled
   entities:
   - uid: 963
     components:
