--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
@@ -20,6 +20,7 @@
       - BountyContractsCartridge
       - AstroNavCartridge
       - WantedListCartridge
+      - CrimeAssistCartridge # DeltaV - Crime Assist
       - LedgerCartridge
       - LogProbeCartridge
       - MailMetricsCartridge
@@ -180,6 +181,7 @@
     - BountyContractsCartridge
     - AstroNavCartridge
     - WantedListCartridge
+    - CrimeAssistCartridge # DeltaV - Crime Assist
     - LedgerCartridge
 
 - type: entity
@@ -472,6 +474,8 @@
     - NewsReaderCartridge
     - BountyContractsCartridge
     - AstroNavCartridge
+    - WantedListCartridge
+    - CrimeAssistCartridge # DeltaV - Crime Assist
     - LedgerCartridge
     - MailMetricsCartridge
 
